Fix iframe-custom-class on smaller screens

--- a/frontend/src/messageBody.styl
+++ b/frontend/src/messageBody.styl
@@ -50,7 +50,7 @@
 
   .iframe-custom-class {
     max-height: 300px !important
-    max-width: calc(100vw - 120px) !important
+    max-width: 400px !important
   }
 }
 
